# jsk_control

./: .gitignore  .rosinstall  .travis.rosinstall.hydro  .travis.yml  .travis_before_script_jsk_recognition_utils.bash  CMakeLists.txt  README.md  make.sh
cmd_vel_smoother/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cmd_vel_smoother/cfg/: CmdVelSmoother.cfg
cmd_vel_smoother/launch/: cmd_vel_smoother.launch
cmd_vel_smoother/src/: cmd_vel_smoother.cpp
contact_states_observer/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
contact_states_observer/euslisp/: contact-states-client.l  contact-states-observer.l  grasp-client.l
contact_states_observer/launch/: contact_grasp_states_publisher.launch
contact_states_observer/msg/: GraspReferenceData.msg  GraspState.msg  GraspStates.msg  OREContactState.msg  OREContactStates.msg
eus_caffe/: CMakeLists.txt  README.md  make.sh  package.xml
eus_caffe/euslisp/: eus-caffe-db.l  eus-caffe.l  eus-log.l  eus-plugin-util.l  ik-caffe.l  ik_solver.prototxt  image-util.l  net.prototxt  solver.prototxt
eus_caffe/sample/ik/: learn.l  (+5 more)
eus_caffe/sh/: cuda_run.sh  graph.sh  scraping.sh
eus_caffe/src/: eus_caffe_db_lib.cpp  eus_caffe_lib.cpp  eus_db.cpp  eus_log_lib.cpp
eus_cddlib/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
eus_cddlib/euslisp/: eus-cddlib-compiled.l  eus-cddlib.l  test-eus-cddlib.l
eus_cddlib/src/: eus_cddlib.c
eus_nlopt/: CHANGELOG.rst  CMakeLists.txt  Makefile  catkin.cmake  cmake_install.cmake  manifest.xml  package.xml
eus_nlopt/cmake/: FindNLopt.cmake
eus_nlopt/euslisp/: fullbody-ik-test.l  nlopt-ik.l  nlopt-object-test.l  nlopt-object.l  nlopt.l
eus_nlopt/include/: my_param.h  nlopt_solver.h
eus_nlopt/launch/: nlopt_ik.launch
eus_nlopt/src/: nlopt_solver.cpp  nlopt_wrapper.cpp  test.cpp
eus_osqp/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
eus_osqp/euslisp/: eus-osqp-compiled.l  eus-osqp.l  test-eus-osqp.l
eus_osqp/src/: eus_osqp.cpp
eus_osqp/test/: eus-osqp-contact-wrench-opt.test.l  eus-osqp-model-predictive-control.test.l  eus-osqp.test.l  eus_osqp.test  eus_osqp_contact_wrench_opt.test  eus_osqp_model_predictive_control.test
eus_qp/: CHANGELOG.rst  CMakeLists.txt  Makefile  README.md  manifest.xml  package.xml
eus_qp/euslisp/: cfr-cwc-calculation.l  contact-optimization.l  eiquadprog.l  model-predictive-control.l  test-cfr-cwc-calculation.l  test-contact-wrench-opt.l  test-model-predictive-control.l
eus_qp/optmotiongen/: README.md
eus_qp/path-tricker/: gen-includes.sh  includes.txt
eus_qp/prioritized-inverse-kinematics/: README.md
eus_qp/src/: example.cpp  qp_lib.cpp
eus_qp/test/: test_cfr_cwc_calculation.l  test_cfr_cwc_calculation.test  test_contact_wrench_opt.l  test_contact_wrench_opt.test  test_model_predictive_control.l  test_model_predictive_control.test
eus_qpoases/: CHANGELOG.rst  CMakeLists.txt  Makefile.qpOASES  catkin.cmake  mainpage.dox  manifest.xml  package.xml
eus_qpoases/euslisp/: eus-qpoases.l  test-eus-qpoases.l
eus_qpoases/examples/: example1.cpp
eus_qpoases/patch/: UseShareLibrary.patch
eus_qpoases/src/: eus_qpoases.cpp
eus_qpoases/test/: eus-qpoases.test.l  eus_qpoases.test
joy_mouse/: CHANGELOG.rst  CMakeLists.txt  README.md  catkin.cmake  package.xml  setup.py
joy_mouse/launch/: kensington_trackball.launch  trackpoint.launch
joy_mouse/scripts/: disable_mouse.py  enable_mouse.py  mouse.py
jsk_calibration/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
jsk_calibration/config/: camera_calib.rviz
jsk_calibration/euslisp/: calibrate-motion.l  calibration.l  hrp2-calibration.l  make-calibration-pose.l
jsk_calibration/hrp2jsknt_calibration/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  upload_urdf.launch
jsk_calibration/hrp2jsknts_calibration/: README.md
jsk_calibration/hrp2w_calibration/: README.md
jsk_calibration/jaxon_calibration/: jaxon-calib-utils.l
jsk_calibration/launch/: manual_caliblation_viewer.launch  manual_calibration_viewer.launch
jsk_calibration/scripts/: joint_states_appender.py
jsk_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_footprint/: CMakeLists.txt  package.xml
jsk_footprint/launch/: costmap_footorint_reconfigure.launch
jsk_footprint/src/: costmap_footorint_reconfigure.cpp
jsk_footstep_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  catkin.cmake  manifest.xml  package.xml
jsk_footstep_controller/action/: GoPos.action  LookAroundGround.action
jsk_footstep_controller/cfg/: FootstepVisualizer.cfg
jsk_footstep_controller/config/: HRP2JSK.yaml  HRP2JSKNTS.yaml  JAXON.yaml  JAXON_BLUE.yaml  JAXON_RED.yaml  diagnostics.yaml  example.yaml  hrp2jsknt_sim.yaml  jaxon.yaml
jsk_footstep_controller/euslisp/: base-controller.l  foostep_param_generate.l  footstep-controller.l  footstep-param-generate.l  footstep-refinement.l  go-pos-client.l  go-pos-server.l  gui-client.l  head-controller.l  jaxon-footstep-controller.l  lookaround-ground.l  resetpose.l  robot-boundingbox.l  root-height.l  sample-footstep-execute.l  sample-root-height.l  simple-footstep-controller.l  test-footstep-refinement.l  util.l
jsk_footstep_controller/launch/: floor_detection.launch  hrp2jsk_footcoords.launch  hrp2jsknt_real.launch  hrp2jsknt_real_full.launch  no_recog.launch  resetmanippose.launch  resetpose.launch  sample_hrp2jsknt.launch  sample_hrp2jsknt_random.launch  test_refinement.launch
jsk_footstep_controller/msg/: FootCoordsLowLevelInfo.msg  GroundContactState.msg  SynchronizedForces.msg
jsk_footstep_controller/sample/: sample_root_height.launch
jsk_footstep_controller/scripts/: contact_state_error.py  dump_mocap.py  foot_contact_monitor.py  footstep-overlay-text.l  footstep_visualizer.py  stabilizer_watcher.py  stance_phase.py
jsk_footstep_planner/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  catkin.cmake  mainpage.dox  manifest.xml  package.xml
jsk_ik_server/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  catkin.cmake  mainpage.dox  manifest.xml  package.xml
jsk_kalman_filter/: CMakeLists.txt  package.xml
(+1289 files in other folders)
