<?xml version="1.0"?>
<package>
  <name>contact_states_observer</name>
  <version>0.0.0</version>
  <description>The contact_states_observer package</description>

  <maintainer email="nozawa@jsk.t.u-tokyo.ac.jp">nozawa</maintainer>
  <license>TODO</license>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
