<?xml version="1.0"?>
<package>
  <name>contact_states_observer</name>
  <version>0.1.17</version>
  <description>The contact_states_observer package</description>

  <maintainer email="nozawa@jsk.t.u-tokyo.ac.jp">nozawa</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roseus</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
