<?xml version="1.0"?>
<package>
  <name> eus_caffe </name>
  <description>
    eus_caffe package
  </description>
  <version>0.0.1</version>
  <maintainer email="s-noda@jsk.t.u-tokyo.ac.jp">Noda Shintaro</maintainer>
  <license>NYLS</license>
  <export> </export>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>snappy</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>hdf5</build_depend>
  <build_depend>atlas</build_depend>
  <build_depend>leveldb</build_depend>
  <!--
      <build_depend>opencv</build_depend>
  -->

  <run_depend>euslisp</run_depend>
</package>
