<?xml version="1.0"?>
<package>
  <name> eus_nlopt </name>
  <description>
    eus_nlopt
  </description>
  <version>0.1.13</version>
  <maintainer email="s-noda@jsk.t.u-tokyo.ac.jp">Noda Shintaro</maintainer>
  <license>Apache License 2.0</license>
  <export> </export>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>nlopt</build_depend>

  <run_depend>euslisp</run_depend>
  <run_depend>nlopt</run_depend>
</package>
