<?xml version="1.0"?>
<package format="3">
  <name>eus_nlopt</name>
  <description>
    eus_nlopt
  </description>
  <version>0.1.18</version>
  <maintainer email="s-noda@jsk.t.u-tokyo.ac.jp">Noda Shintaro</maintainer>
  <license>Apache License 2.0</license>
  <export> </export>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">nlopt</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">libnlopt-dev</build_depend>

  <exec_depend>euslisp</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">nlopt</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">libnlopt-dev</exec_depend>
</package>
