<?xml version="1.0"?>
<package>
  <name> eus_osqp</name>
  <description>
    eus_osqp
  </description>
  <version>0.1.15</version>
  <maintainer email="murooka@jsk.t.u-tokyo.ac.jp">Masaki Murooka</maintainer>
  <license>Apache License 2.0</license>
  <export> </export>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>subversion</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>euslisp</run_depend>
  <run_depend>rostest</run_depend>
</package>
