<?xml version="1.0"?>
<package>
  <name>eus_qp</name>
  <description>
    eus_qp is an interface of euslisp to solve qp problems with linear constraints.
  </description>
  <version>0.1.15</version>
  <maintainer email="s-noda@jsk.t.u-tokyo.ac.jp">Noda Shintaro</maintainer>
  <license>Apache License 2.0</license>
  <export> </export>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>euslisp</run_depend>
  <run_depend>eigen</run_depend>

  <test_depend>eus_qpoases</test_depend>
</package>
