<?xml version="1.0"?>
<package>
  <name> eus_qpoases </name>
  <description>
    eus_qpoases
  </description>
  <version>0.1.0</version>
  <maintainer email="nozawa@jsk.t.u-tokyo.ac.jp">Shunichi Nozawa</maintainer>
  <license>Apache License 2.0</license>
  <export> </export>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>mk</build_depend>
</package>
