<?xml version="1.0"?>
<package>
  <name>joy_mouse</name>
  <version>0.1.15</version>
  <description>The joy_mouse package</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>python-pyudev</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>python-pyudev</run_depend>
  <export>
  </export>
</package>
