<?xml version="1.0"?>
<package format="3">
  <name>joy_mouse</name>
  <version>0.1.17</version>
  <description>The joy_mouse package</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-pyudev</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-pyudev</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pyudev</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pyudev</exec_depend>

  <export>
  </export>
</package>
