<?xml version="1.0"?>
<package>
  <name>jsk_calibration</name>
  <version>0.1.12</version>
  <description>The jsk_calibration package</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roseus</build_depend>
  <run_depend>roseus</run_depend>
  <build_depend>pr2_msgs</build_depend>
  <run_depend>pr2_msgs</run_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <export>
  </export>
</package>
