<?xml version="1.0"?>
<package>
  <name>jsk_footstep_controller</name>
  <version>0.1.0</version>
  <description>The jsk_footstep_controller package</description>

  <maintainer email="garaemon@gmail.com">Ryohei Ueda</maintainer>


  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jsk_footstep_msgs</build_depend>
  <build_depend>jsk_footstep_planner</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>jsk_footstep_msgs</run_depend>
  <run_depend>jsk_footstep_planner</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
