<?xml version="1.0"?>
<package>
  <name>jsk_footstep_controller</name>
  <version>0.1.16</version>
  <description>The jsk_footstep_controller package</description>

  <maintainer email="garaemon@gmail.com">Ryohei Ueda</maintainer>


  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jsk_footstep_msgs</build_depend>
  <build_depend>jsk_footstep_planner</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>jsk_footstep_msgs</run_depend>
  <run_depend>jsk_footstep_planner</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>jsk_pcl_ros</build_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <build_depend>tf_conversions</build_depend>
  <run_depend>tf_conversions</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <export>
  </export>
</package>
